[FIX] sap.m.IconTabHeader: sapUiResponsiveContentPadding class is now applied
Problem: CSS selector wasn't covering the case when IconTabHeader
is used standalone as sticky header in DynamicPage.

Solution: Now the selector is adapted and simplified,
because classes are always applied directly on the header.

Snippix: 22913

BCP: 2070320025

--- a/src/sap.m/src/sap/m/themes/base/IconTabBar.less
+++ b/src/sap.m/src/sap/m/themes/base/IconTabBar.less
@@ -908,15 +908,9 @@ html.sap-desktop {
 }
 
 .sapUiMedia-Std-Desktop {
-
-	.sapUiResponsiveContentPadding {
-		.sapMITH {
-			padding: 0 3rem;
-		}
+	.sapUiResponsiveContentPadding.sapMITH {
+		padding: 0 3rem;
 	}
-}
-
-.sapUiMedia-Std-Desktop {
 
 	/* --------------------------------------------------------- */
 	/* Switch paddings when in a split container with side open  */
@@ -935,10 +929,8 @@ html.sap-desktop {
 	/* ------------------------------------------------ */
 
 	&.sapUiMedia-StdExt-LargeDesktop {
-		.sapUiResponsiveContentPadding {
-			.sapMITH {
-				padding: 0 3rem;
-			}
+		.sapUiResponsiveContentPadding.sapMITH {
+			padding: 0 3rem;
 		}
 	}
 }
